# pathway

./: .gitignore  .pnp.cjs  Makefile  Pulumi.yaml  README.md  download-models.sh  environment.yml  main.py  mypy.ini  package-lock.json  package.json  position_calculator.py  pyproject.toml  test_position_calculator.py
.github/workflows/: test.yml
pulumi/: Pulumi.production.yaml  index.ts
raspberry/: setup.sh
src/pathway/: main.py  object_detector.py  test_object_detector.py  test_position_calculator.py
src/pathway/camera/: camera.py  get_camera.py  opencv_camera.py  picamera.py
src/pathway/imageai/: detection.py  yolo.py  yolo_utils.py
src/pathway_client/: led_strategy.py  main.py  test_led_strategy.py
src/pathway_client/camera/: camera.py  frame_to_jpg.py  get_camera.py  opencv_camera.py  picamera.py
src/pathway_client/leds/: get_led_controller.py  led_controller.py  neopixel_controller.py  terminal_controller.py
src/pathway_service/: Dockerfile  main.py  object_detector.py  position_calculator.py  test_object_detector.py  test_position_calculator.py
src/pathway_service/imageai/: detected_item.py  detection.py  yolo.py  yolo_utils.py
src/pathway_shared/: detected_object.py  log_time.py  position.py
tools/: download-models.sh  install.sh
