[tool.poetry]
name = "pathway"
version = "0.1.0"
description = ""
authors = ["Younes Jaaidi <yjaaidi@gmail.com>"]
packages = [
  { include = "pathway", from = "src" }
]

[tool.poetry.scripts]
start = "pathway.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Pillow = "^9.2.0"
Rx = "^3.2.0"
h5py = "^3.7.0"
keras = "^2.9.0"
keras-resnet = "^0.2.0"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
scipy = "^1.8.1"
tensorflow = {version = "^2.9.1", markers = "platform_machine != 'aarch64'"}

picamera = {version = "^1.13", markers = "platform_machine == 'aarch64'"}
tflite-runtime = {version = "^2.9.1", markers = "platform_machine == 'aarch64'"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"