[tool.poetry]
name = "pathway"
version = "0.1.0"
description = ""
authors = ["Younes Jaaidi <yjaaidi@gmail.com>"]
packages = [
  { include = "pathway_client", from = "src" },
  { include = "pathway_service", from = "src" }
]

[tool.poetry.scripts]
start-client = "pathway_client.main:start"
start-service = "pathway_service.main:start"
start-service-dev = "pathway_service.main:start_dev"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Pillow = "^9.2.0"
Rx = "^3.2.0"
h5py = "^3.7.0"
keras = "^2.9.0"
keras-resnet = "^0.2.0"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
scipy = "^1.8.1"
tensorflow = {version = "^2.9.1", markers = "platform_machine != 'aarch64'"}
tensorflow-aarch64 = {version = "^2.9.1", markers = "platform_machine == 'aarch64'"}
fastapi = "^0.80.0"
python-multipart = "^0.0.5"
uvicorn = "^0.18.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
mypy = "^0.971"
types-Pillow = "^9.2.1"
types-requests = "^2.28.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"