[tool.poetry]
name = "pathway"
version = "0.1.0"
description = ""
authors = ["Younes Jaaidi <yjaaidi@gmail.com>"]
packages = [
  { include = "pathway_client", from = "src" },
  { include = "pathway_service", from = "src" },
  { include = "pathway_shared", from = "src" }
]

[tool.poetry.scripts]
start-client = "pathway_client.main:start"
start-service = "pathway_service.main:start"
start-service-dev = "pathway_service.main:start_dev"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Pillow = "^9.2.0"
numpy = "^1.23.1"
Rx = { version = "^3.2.0", optional = true }
fastapi = {version = "^0.80.0", optional = true}
h5py = { version = "^3.7.0", optional = true }
keras = { version = "^2.9.0", optional = true }
keras-resnet = { version = "^0.2.0", optional = true }
matplotlib = { version = "^3.5.2", optional = true }
opencv-python-headless = { version = "^4.6.0", optional = true }
opencv-contrib-python-headless = { version = "^4.6.0", optional = true }
tensorflow = {version = "^2.9.1", markers = "platform_machine != 'aarch64'", optional = true}
tensorflow-aarch64 = {version = "^2.9.1", markers = "platform_machine == 'aarch64'", optional = true}
python-multipart = {version = "^0.0.5", optional = true}
uvicorn = {version = "^0.18.2", optional = true}
requests = {version = "^2.28.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
mypy = "^0.971"
types-Pillow = "^9.2.1"
types-requests = "^2.28.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"

[tool.poetry.extras]
client = ["Rx", "opencv-python", "requests"]
service = ["h5py", "fastapi", "keras", "keras-resnet", "matplotlib", "opencv-python-headless", "opencv-contrib-python-headless", "python-multipart", "tensorflow", "uvicorn"]